# Multi-Agent_with_the_LangGraph_Framework

./: .gitignore  README.md  pyproject.toml  ruff.toml
config/: ansi_colors.py  logging_config.py  settings.py
example1_langgraph_swarm/: HOW_TO_USE_OUR_AGENT.md  QUICKSTART.md  agents.py  api.py  cli.py  config_rag_azure.py  database.py  docker-compose.yml  langgraph_swarm.ipynb  multi_agent_langgraph_swarm_and_crewai.py  quickstart_example1.md  service.py  view_collections.py
example1_langgraph_swarm/ui_reactpy/: ui.py
