[project]
name = "multi-langgraph"
version = "0.1.0"
description = "Aqui vamos a construir alguns exemplos de multi-agentes"
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel==7.1.0",
    "langchain==1.2.3",
    "langchain-community==0.4.1",
    "langchain-openai==1.1.7",
    "langchain-tavily==0.2.17",
    "langgraph==1.0.6",
    "langgraph-swarm==0.1.0",
    "rich==14.2.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ruff==0.14.11",
]

[tool.ruff]
extend = "ruff.toml"
