[project]
name = "multi-langgraph"
version = "0.1.0"
description = "Aqui vamos a construir alguns exemplos de multi-agentes"
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai-tools>=0.17.0",
    "fastapi==0.128.0",
    "ipykernel==7.1.0",
    "langchain==1.2.3",
    "langchain-community==0.4.1",
    "langchain-openai==1.1.7",
    "langchain-tavily==0.2.17",
    "langgraph==1.0.6",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-swarm==0.1.0",
    "psycopg[binary]>=3.2.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "reactpy>=1.1.0",
    "rich==14.2.0",
    "httpx>=0.24.0",
    "uvicorn<0.36.0",
    "dedent==0.5",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ruff==0.14.11",
]

[tool.ruff]
extend = "ruff.toml"
